Payout percentage is constant all the counsellor
